turtleart.house.House.scala.error
Compilation error:
House:9: error: '<-' expected but ')' found.
  for (i <0 to 2) {
                ^House:13: error: illegal start of simple expression
} 
^