turtleart.house.House.scala.code
override def run() {
  forward(100)
  right(30)
  for (i <- 0 to 2) {
    forward(100)
    right(120)
  }
  right(60)
  for (i <0 to 2) {
    forward(100)
    right(90)
  }
}